Updated the Docker-compose.yml file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,101 +1,133 @@
-version: '3'
-
 services:
   traefik:
     image: traefik:v3.3
-    command:
-      - "--providers.docker=true"
-      - "--providers.docker.exposedByDefault=false"
-      - "--entrypoints.web.address=:80"
-      - "--entrypoints.websecure.address=:443"
-      # Redirect HTTP to HTTPS
-      - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
-      # Let's Encrypt configuration
-      - "--certificatesresolvers.leresolver.acme.email=opaluwaamy@gmail.com"
-      - "--certificatesresolvers.leresolver.acme.storage=/etc/traefik/acme.json"
-      - "--certificatesresolvers.leresolver.acme.httpchallenge.entrypoint=web"
+    command: "--configFile=./config/traefik.yml"
     ports:
-      - "80:80"
+      - "8085:8085"
       - "443:443"
     volumes:
       - "./traefik_data:/etc/traefik"
+      - "./config/configuration.yml:/config/traefik.yml:ro"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./acme.json:/etc/traefik/acme.json"
-    networks:
-      - localhost_net
+      - "./localhost.crt:/certs/localhost.crt:ro"
+      - "./localhost.key:/certs/localhost.key:ro"
     labels:
       - "traefik.enable=true"
-
+      - "traefik.http.routers.traefik.rule=Host(`proxy.localhost`)"
+      - "traefik.http.routers.traefik.entrypoints=websecure"
+      - "traefik.http.services.traefik.loadbalancer.server.port=8085"
+    networks:
+      - localhost_net
   app:
     image: app
     build: ./frontend
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=Host(`missopaluwa.ddns.net`)"
-      - "traefik.http.routers.app.entrypoints=websecure"
-      - "traefik.http.routers.app.tls.certresolver=leresolver"
-      - "traefik.http.services.app.loadbalancer.server.port=8080"
+    - "traefik.enable=true"
+    - "traefik.http.routers.app.rule=Host(`localhost`)"
+    - "traefik.http.routers.app.entrypoints=websecure"
+    # - "traefik.http.routers.frontend.tls.certresolver=myresolver"
+    - "traefik.http.services.app.loadbalancer.server.port=8080"
     networks:
       - localhost_net
+    ports:
+      - "8080:8080"
     depends_on:
       - auth-api
       - todos-api
       - users-api
     environment:
       - PORT=${PORT}
-      - AUTH_API_ADDRESS=https://auth.missopaluwa.ddns.net
-      - TODOS_API_ADDRESS=https://todos.missopaluwa.ddns.net
+      - AUTH_API_ADDRESS=${AUTH_API_ADDRESS}
+      - TODOS_API_ADDRESS=${TODOS_API_ADDRESS}
+    
 
   auth-api:
     image: auth-api
     build: ./auth-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.auth.rule=Host(`auth.missopaluwa.ddns.net`)"
+      - "traefik.http.routers.auth.rule=Host(`auth.localhost`)"
       - "traefik.http.routers.auth.entrypoints=websecure"
-      - "traefik.http.routers.auth.tls.certresolver=leresolver"
+      # - "traefik.http.routers.auth.tls.certresolver=myresolver"
       - "traefik.http.services.auth.loadbalancer.server.port=8081"
     networks:
       - localhost_net
+    ports:
+      - 8081:8081
+    depends_on:
+      - redis
     environment:
       - AUTH_API_PORT=${AUTH_API_PORT}
       - JWT_SECRET=${JWT_SECRET}
-      - USERS_API_ADDRESS=https://users.missopaluwa.ddns.net
-
+      - USERS_API_ADDRESS=${USERS_API_ADDRESS}
+  
   todos-api:
     image: todos-api
     build: ./todos-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.todos.rule=Host(`todos.missopaluwa.ddns.net`)"
+      - "traefik.http.routers.todos.rule=Host(`todos.localhost`)"
       - "traefik.http.routers.todos.entrypoints=websecure"
-      - "traefik.http.routers.todos.tls.certresolver=leresolver"
+      # - "traefik.http.routers.auth.tls.certresolver=myresolver"
       - "traefik.http.services.todos.loadbalancer.server.port=8082"
     networks:
       - localhost_net
+    ports:
+      - "8082:8082"
+    depends_on:
+      - redis
     environment:
       - JWT_SECRET=${JWT_SECRET}
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
-
+      - REDIS_CHANNEL=${REDIS_CHANNEL}
+  
   users-api:
     image: users-api
     build: ./users-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.users.rule=Host(`users.missopaluwa.ddns.net`)"
+      - "traefik.http.routers.users.rule=Host(`users.localhost`)"
       - "traefik.http.routers.users.entrypoints=websecure"
-      - "traefik.http.routers.users.tls.certresolver=leresolver"
+      # - "traefik.http.routers.users.tls.certresolver=myresolver"
       - "traefik.http.services.users.loadbalancer.server.port=8083"
     networks:
       - localhost_net
+    ports:
+      - "8083:8083"
+    depends_on:
+      - redis
     environment:
       - SERVER_PORT=${SERVER_PORT}
       - JWT_SECRET=${JWT_SECRET}
-
-  # ... (keep the redis, log-message-processor, etc. unchanged)
+  
+  log-message-processor:
+    image: log-message-processor
+    build: ./log-message-processor
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - REDIS_CHANNEL=${REDIS_CHANNEL}
+    networks:
+      - localhost_net
+    
+  redis:
+    image: redis:alpine
+    restart: always
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - "./redis_data:/data"
+    networks:
+      - localhost_net
 
 networks:
   localhost_net:
     external: true
+
+volumes:
+  traefik_data:
+    driver: local
