--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,17 @@ services:
     image: traefik:v3.3
     command: "--configFile=./config/traefik.yml"
     ports:
-      - "8080:8080"
-      - "8443:443"
+      - "9080:8080"
+      - "443:443"
     volumes:
       - "./traefik_data:/etc/traefik"
       - "./config/configuration.yml:/config/traefik.yml:ro"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./localhost.crt:/certs/localhost.crt:ro"
-      - "./localhost.key:/certs/localhost.key:ro"
+      - "/certs/localhost.crt:/certs/localhost.crt:ro"
+      - "./certs/localhost.key:/certs/localhost.key:ro"
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.traefik.rule=Host(`proxy.localhost`)"
+      - "traefik.http.routers.traefik.rule=Host(`proxy.emidowojo.site`)"
       - "traefik.http.routers.traefik.entrypoints=websecure"
       - "traefik.http.services.traefik.loadbalancer.server.port=8085"
     networks:
@@ -23,14 +23,14 @@ services:
     build: ./frontend
     labels:
     - "traefik.enable=true"
-    - "traefik.http.routers.app.rule=Host(`localhost`)"
+    - "traefik.http.routers.app.rule=Host(`emidowojo.site`)"
     - "traefik.http.routers.app.entrypoints=websecure"
     # - "traefik.http.routers.frontend.tls.certresolver=myresolver"
     - "traefik.http.services.app.loadbalancer.server.port=8080"
     networks:
       - localhost_net
     ports:
-      - "9090:8080"
+      - "8080:8080"
     depends_on:
       - auth-api
       - todos-api
@@ -46,7 +46,7 @@ services:
     build: ./auth-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.auth.rule=Host(`auth.localhost`)"
+      - "traefik.http.routers.auth.rule=Host(`auth.emidowojo.site`)"
       - "traefik.http.routers.auth.entrypoints=websecure"
       # - "traefik.http.routers.auth.tls.certresolver=myresolver"
       - "traefik.http.services.auth.loadbalancer.server.port=8081"
@@ -66,7 +66,7 @@ services:
     build: ./todos-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.todos.rule=Host(`todos.localhost`)"
+      - "traefik.http.routers.todos.rule=Host(`todos.emidowojo.site`)"
       - "traefik.http.routers.todos.entrypoints=websecure"
       # - "traefik.http.routers.auth.tls.certresolver=myresolver"
       - "traefik.http.services.todos.loadbalancer.server.port=8082"
@@ -87,7 +87,7 @@ services:
     build: ./users-api
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.users.rule=Host(`users.localhost`)"
+      - "traefik.http.routers.users.rule=Host(`users.emidowojo.site`)"
       - "traefik.http.routers.users.entrypoints=websecure"
       # - "traefik.http.routers.users.tls.certresolver=myresolver"
       - "traefik.http.services.users.loadbalancer.server.port=8083"
@@ -117,7 +117,7 @@ services:
     image: redis:alpine
     restart: always
     ports:
-      - "6380:6379"
+      - "6379:6379"
     command: ["redis-server", "--appendonly", "yes"]
     volumes:
       - "./redis_data:/data"
@@ -126,7 +126,7 @@ services:
 
 networks:
   localhost_net:
-    external: true
+    name: localhost_net
 
 volumes:
   traefik_data:
